<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="MSF ID"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/add_patient_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="MSF Id"
                android:ems="10"
                android:layout_marginRight="12dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/add_patient_given_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Given name"
                android:ems="10"
                android:layout_marginRight="12dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/add_patient_family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Family name"
                android:layout_marginLeft="12dp"
                android:ems="10"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Date of birth"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/add_patient_dob_estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estimated"
                android:layout_marginRight="12dp"/>
            <EditText
                android:id="@+id/add_patient_dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:inputType="number"
                android:hint="Years"/>

            <Spinner
                android:id="@+id/add_patient_age_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:entries="@array/add_patient_age_type"
                android:spinnerMode="dialog"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Gender"/>
        <Spinner
            android:id="@+id/add_patient_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/add_patient_gender"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem"
        android:orientation="vertical">

        <Switch
            style="@style/FormLabel"
            android:id="@+id/add_patient_is_pregnant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pregnant"
            android:textOn="Yes"
            android:textOff="No" />

        <TextView
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:id="@+id/add_patient_pregnant_date"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:ellipsize="marquee"
            android:visibility="gone"
            android:text="0/0/0" />
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Location"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Spinner
                android:layout_weight="1"
                android:id="@+id/add_patient_location_zone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/add_patient_locations"
                android:spinnerMode="dialog"
                android:layout_marginRight="12dp"/>
            <EditText
                android:id="@+id/add_patient_location_tent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Tent"
                android:ems="10"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/add_patient_location_bed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Bed"
                android:layout_marginLeft="12dp"
                android:ems="10"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>