<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Important information"/>
        <EditText
            android:id="@+id/add_patient_important_information"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Next of kin"/>
        <EditText
            android:id="@+id/add_patient_next_of_kin"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>
    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Area"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <EditText
                android:id="@+id/add_patient_area_district"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:hint="District"/>
            <EditText
                android:id="@+id/add_patient_area_chiefdom"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="Chiefdom"/>
            <EditText
                android:id="@+id/add_patient_area_village"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:hint="Village"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>