<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Patient status"/>
        <Spinner
            android:id="@+id/add_patient_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/add_patient_patient_status"
            android:spinnerMode="dialog"/>
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Date first showed symptoms"/>

        <TextView
            android:id="@+id/add_patient_date_first_shown_symptoms"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:paddingLeft="8dp"
            android:text="0/0/0" />
    </LinearLayout>

    <LinearLayout
        style="@style/FormItem">
        <TextView
            style="@style/FormLabel"
            android:text="Movement"/>
        <Spinner
            android:id="@+id/add_patient_movement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/add_patient_movement"
            android:spinnerMode="dialog"/>

    </LinearLayout>
</LinearLayout>