...
  <string name="mobility_walking_with_difficulty">Wd</string>
  <string name="mobility_assisted">As</string>
  <string name="mobility_bed_bound">BB</string>
  <string name="pcr_negative">NEG</string>
  <string name="error_setting_location">Could not set the patient location. Please try again.</string>
  <string name="tent_selection_dialog_title">Loading…</string>
  <string name="tent_selection_dialog_message">Please wait while patient and location data are retrieved. If this is the first time data has been loaded, this may take a few minutes.</string>
  <string name="admission_date_label">Admission date</string>
  <string name="symptoms_onset_date_label">Symptom onset date</string>
  <string name="symptoms_onset_date_picker_title">Symptom onset date</string>
  <string name="admission_date_picker_title">Admission date</string>
  <string name="patient_creation_client_error">could not add patient to local database</string>
  <string name="patient_creation_network_error">could not complete server request</string>
...
  <string name="patient_creation_unknown_error">unknown error</string>
  <string name="patient_creation_invalid_id_error">patient ID is invalid</string>
  <string name="patient_creation_duplicate_id_error">another patient exists with the same ID</string>
  <string name="patient_creation_invalid_family_name_error">family name is invalid</string>
  <string name="patient_creation_invalid_given_name_error">given name is invalid</string>
  <string name="sync_failed_dialog_title">Sync Error</string>
  <string name="sync_failed_dialog_message">An error occurred while retrieving data from the server. Please check your OpenMRS settings or try again.</string>
  <string name="sync_failed_settings">Settings</string>
  <string name="sync_failed_retry">Retry</string>
  <string name="user_sync_failed_dialog_message">An error occurred while retrieving the user list. Please check your OpenMRS settings or try again.</string>
  <string name="patient_list_fragment_sync_error">Error syncing patient data. Please check settings or try again.</string>
  <string name="api_health_problem">Unable to contact the server.  Please see the bar along the bottom of the screen for more information about the problem.</string>
  <string name="sync_failed_back">Back</string>
  <string name="no_user">No user is signed in.</string>
  <string name="idle_signed_out">Signed out due to inactivity.</string>
...
  <string name="pref_header_developer">Developer</string>

  <!-- Preference titles and descriptions -->
  <string name="pref_title_server">Buendia server</string>
  <string name="pref_title_openmrs_user">OpenMRS username</string>
  <string name="pref_title_openmrs_password">OpenMRS password</string>
  <string name="pref_title_openmrs_root_url">OpenMRS base URL</string>
  <string name="pref_title_package_server_url">Package server URL</string>
  <string name="pref_title_language">Language</string>
  <string name="select_language">Select Language</string>

  <string name="pref_title_anonymize_patients">Hide patient names</string>
  <string name="pref_desc_anonymize_patients">Alters the displayed names of patients to protect their privacy</string>
...
